--- a/amap/tif-wms.html
+++ b/amap/tif-wms.html
@@ -31,12 +31,12 @@
 			 */
 			function initMap() {
 				map = new AMap.Map('container', {
-						zoom: 14, // 初始化地图层级
+						zoom: 15, // 初始化地图层级
 						center: [108.948301, 34.223445], // 初始化地图中心点
 						resizeEnable: true,
 						rotateEnable: true,
 						pitchEnable: true,
-						// pitch: 65, //俯视
+						pitch: 65, //俯视
 						rotation: 0,
 						viewMode: '3D', // 使用3D视图
 						mapStyle: 'amap://styles/0b7f2aecffe8113ba5f3ebe55c8a1b45' //小娇
