--- a/amap/index.html
+++ b/amap/index.html
@@ -58,7 +58,10 @@
 			pitch: 65, //俯视
 			rotation: 0,
 			viewMode: '3D', // 使用3D视图
-			mapStyle: 'amap://styles/0b7f2aecffe8113ba5f3ebe55c8a1b45'//小娇
+			mapStyle: 'amap://styles/0b7f2aecffe8113ba5f3ebe55c8a1b45',//小娇
+			// mapStyle: 'amap://styles/darkblue',
+			features: ['bg', 'road', 'building', 'point'], // 'bg', 'road', 'building', 'point'
+			// showLabel: false,
 		})
 		.on('complete',()=>{
 			map.addControl(controlBar); //添加控制器
