--- a/ol/index.html
+++ b/ol/index.html
@@ -9,6 +9,8 @@
 		<h2>大屏：</h2>
 		<h3><a target="_blank" href="../amap/index.html">高德地图</a></h3>
 		<h3><a target="_blank" href="../amap/tif-xyz.html">高德tif</a></h3>
+		<h3><a target="_blank" href="../amap/transform.html">坐标转换</a></h3>
+		<h3><a target="_blank" href="../amap/style.html">样式</a></h3>
 		
 		<h2>综合监控：</h2>
 		<h3><a target="_blank" href="../esri/dem.html">arcgis叠加dem</a></h3>
