--- a/ol/index.html
+++ b/ol/index.html
@@ -6,6 +6,11 @@
 		<title>小寨demo</title>
 	</head>
 	<body>
+		<h2>绩效考核：</h2>
+		<h3><a target="_blank" href="jxkh\shjzt\yyxjl\index.html">源污染削减率对比-tif</a></h3>
+		<h3><a target="_blank" href="jxkh\saqzt\psnl\index.html">排水能力对比-json</a></h3>
+		
+		
 		<h2>大屏：</h2>
 		<h3><a target="_blank" href="../amap/index.html">高德地图</a></h3>
 		<h3><a target="_blank" href="../amap/tif-xyz.html">高德tif</a></h3>
@@ -38,6 +43,7 @@
 		<h3><a target="_blank" href="xgpg/jcjslys/manhole_deep_render/index.html">检查井-水深变化过程</a></h3>
 		<h3><a target="_blank" href="xgpg/jcjslys/manhole_flow_render/index.html">检查井-溢流过程展示</a><span>备注：只有一个强度</span></h3>
 		<h3><a target="_blank" href="xgpg/jcjslys/quality_render/index.html">检查井-水质变化过程</a><span>备注：只有一个强度，平台没有该项，图例参照了“排水管网-水质变化过程”</span></h3>
+		
 		
 	</body>
 </html>
